--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "sync-request": "^6.0.0",
     "trycatch": "^1.5.21",
     "youtube-dl": "^1.12.2"
+  },
+  "engines": {
+    "node": "8.9.4",
+    "npm": "5.6.0"
   }
 }
